add balance component

--- a/src/pages/404/index.css
+++ b/src/pages/404/index.css
@@ -36,7 +36,7 @@ body {
     margin-top: 0;
     margin-bottom: 0.6rem;
     letter-spacing: 0.1rem;
-    color: #595959;
+    color: #fff;
 }
 
 .content p:last-child {
